--- a/crm/webapp/templates/webapp/index.html
+++ b/crm/webapp/templates/webapp/index.html
@@ -1,1 +1,19 @@
-<h1> Hello, World! </h1>
+{% extends 'webapp/base.html' %} 
+
+{% block content %}
+
+    <body>
+        <br>
+        <br>
+
+        <div class="text-center">
+            <h3>ProjectX.. Management at it's finest!</h3>
+            <br>
+            <h5>Keep track of your records effectively</h5>
+            <hr>
+            <br>
+            <a class="btn btn-primary" type="button" href="{% url 'register' %}" >Create your Account</a>
+        </div>
+    </body>
+
+{% endblock %}
