--- a/crm/webapp/templates/webapp/navbar.html
+++ b/crm/webapp/templates/webapp/navbar.html
@@ -17,10 +17,11 @@
 
   <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
     <ul class="navbar-nav mr-auto">
-      &nbsp; &nbsp; &nbsp; {% if user.is_authenticated %}
+      &nbsp; &nbsp; &nbsp; 
+      {% if user.is_authenticated %}
 
       <li class="nav-item">
-        <a class="nav-link" href="{% url '' %}"
+        <a class="nav-link" href="{% url 'dashboard' %}"
           >Dashboard &nbsp; <i class="fa fa-home" aria-hidden="true"></i>
         </a>
       </li>
@@ -28,7 +29,7 @@
       &nbsp; &nbsp; &nbsp;
 
       <li class="nav-item">
-        <a class="nav-link" href="{% url '' %}"
+        <a class="nav-link" href="{% url 'user-logout' %}"
           >Sign out &nbsp; <i class="fa fa-sign-out" aria-hidden="true"></i>
         </a>
       </li>
