--- a/crm/webapp/templates/webapp/dashboard.html
+++ b/crm/webapp/templates/webapp/dashboard.html
@@ -4,7 +4,7 @@
 
 <hr />
 
-<a class="btn btn-outline-primary btn-sm" href="{% url 'dashboard' %}">
+<a class="btn btn-outline-primary btn-sm" href="{% url 'create-record' %}">
     Create a new record &nbsp;
     <i class="fa fa-plus-circle" aria-hidden="true"></i>
 </a>
