--- a/crm/webapp/templates/webapp/create-record.html
+++ b/crm/webapp/templates/webapp/create-record.html
@@ -2,33 +2,74 @@
 
 {% load crispy_forms_tags %}
 
+
 {% block content %}
 
+    <body>
 
-<body>
-    <div class="container bg-light shadow-md p-5 form-layout">
-      <h3>Create Record</h3>
+        <div class="container bg-light shadow-md p-5 form-layout">
 
-      <h6>Start adding in the required details for your record. </h6>
-      <hr />
-      <br />
-      <form method="POST" autocomplete="off">
-        {% csrf_token %} {{form|crispy}}
-        <br />
-        <button type="submit" class="btn btn-primary w-100 btn-block p-2">
-          Create Record
-        </button>
-      </form>
-    </div>
-</body>
+            <h3> Create record </h3>
 
+            <h6> Start adding in the required details for your record. </h6>
 
+            <hr>
+            <br>
+
+            <form method="POST" autocomplete="off">
+
+                {% csrf_token %}
+
+                {{form.first_name|as_crispy_field}}
+
+                <br>
+
+                {{form.last_name|as_crispy_field}}
+
+                <br>
+
+                {{form.email|as_crispy_field}}
+
+                <br>
+
+                {{form.phone|as_crispy_field}}
+
+                <br>
+
+                {{form.address|as_crispy_field}}
+
+                <br>
+
+                {{form.city|as_crispy_field}}
+
+                <br>
+
+                {{form.province|as_crispy_field}}
+
+                <br>
+
+                {{form.country|as_crispy_field}}
+
+                <br>
+                
+                <button type="submit" class="btn btn-primary"> 
+                    
+                    Create record &nbsp; <i class="fa fa-check" aria-hidden="true"></i>
+                </button>
+                &nbsp;
+                <a href="{% url 'dashboard' %}" class="btn btn-secondary"> 
+                    Return &nbsp; <i class="fa fa-arrow-left" aria-hidden="true"></i>
+
+                </a>
+            </form>
+
+        </div>
+
+        <br>
+
+    </body>
 
 {% endblock %}
-
-
-
-
 
 
 
