--- a/crm/webapp/templates/webapp/navbar.html
+++ b/crm/webapp/templates/webapp/navbar.html
@@ -1,7 +1,10 @@
-<nav
-  class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-center"
->
-  <a class="navbar-brand main-heading" href="{% url '' %}"> &nbsp; ProjectX </a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-center">
+
+  <a class="navbar-brand main-heading" href="{% url '' %}"> 
+          
+    &nbsp; ProjectX
+  
+  </a>
 
   <button
     class="navbar-toggler"
@@ -13,40 +16,38 @@
     aria-label="Toggle navigation"
   >
     <span class="navbar-toggler-icon"></span>
+
   </button>
 
-  <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-    <ul class="navbar-nav mr-auto">
-      &nbsp; &nbsp; &nbsp; 
-      {% if user.is_authenticated %}
+    <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+      
+      <ul class="navbar-nav mr-auto">
+
+        &nbsp;     &nbsp;     &nbsp; 
+
+        {% if user.is_authenticated %}
+
+          <li class="nav-item">
+      
+            <a class="nav-link" href="{% url 'dashboard' %}">Dashboard &nbsp; <i class="fa fa-home" aria-hidden="true"></i> </a>
+
+          </li>
+          &nbsp;     &nbsp;     &nbsp; 
+          <li class="nav-item">
+
+            <a class="nav-link" href="{% url 'user-logout' %}">Sign out &nbsp; <i class="fa fa-sign-out" aria-hidden="true"></i> </a>
+
+          </li>
+      </ul>
+      {% else %}
 
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'dashboard' %}"
-          >Dashboard &nbsp; <i class="fa fa-home" aria-hidden="true"></i>
-        </a>
+        <a class="nav-link" href="{% url 'register' %}"> Register </a>
       </li>
-
-      &nbsp; &nbsp; &nbsp;
-
+      &nbsp;     &nbsp;     &nbsp; 
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'user-logout' %}"
-          >Sign out &nbsp; <i class="fa fa-sign-out" aria-hidden="true"></i>
-        </a>
+        <a class="nav-link" href="{% url 'my-login' %}">Login</a>
       </li>
-    </ul>
-
-    {% else %}
-
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'register' %}"> Register </a>
-    </li>
-
-    &nbsp; &nbsp; &nbsp;
-
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'my-login' %}">Login</a>
-    </li>
-
-    {% endif %}
-  </div>
+      {% endif %}    
+    </div>
 </nav>
